--- a/list.html
+++ b/list.html
@@ -39,7 +39,7 @@
     input {
       border:solid 1px #ccc;
       border-radius: 5px;
-      padding:7px 14px;
+      padding:10px 18px;
       margin-bottom:10px
     }
     input:focus {
@@ -386,9 +386,364 @@
       <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海马戏城">한자복사</button>
     </li>
     <li>
-      <h3 class="kor"></h3>
-      <p class="chn"></p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="">한자복사</button>
+      <h3 class="kor">송칭링 옛집</h3>
+      <p class="chn">宋庆龄故居</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="宋庆龄故居">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">쉬안먀오관</h3>
+      <p class="chn">玄妙观</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="玄妙观">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">스지톈차오 육교</h3>
+      <p class="chn">世纪天桥</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="世纪天桥">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">스쯔린</h3>
+      <p class="chn">狮子林</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="狮子林">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">스쿠먼</h3>
+      <p class="chn">石庫門</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="石庫門">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">스쿠먼 우리샹 박물관</h3>
+      <p class="chn">石库门屋里厢博物馆</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="石库门屋里厢博物馆">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">시양징</h3>
+      <p class="chn">西洋镜</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="西洋镜">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">시후</h3>
+      <p class="chn">西湖</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="西湖">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">신톈디</h3>
+      <p class="chn">新天地</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="新天地">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">쑤저우 박물관</h3>
+      <p class="chn">苏州博物馆</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="苏州博物馆">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">쑤저우 실크 박물관</h3>
+      <p class="chn">苏州丝绸博物馆</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="苏州丝绸博物馆">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">쑨중산 옛집 기념관</h3>
+      <p class="chn">上海孙中山故居纪念馆</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海孙中山故居纪念馆">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">쓰난루</h3>
+      <p class="chn">思南路</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="思南路">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">쓰난맨션</h3>
+      <p class="chn">思南公馆</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="思南公馆">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">아일랜드 식스 아트 센터</h3>
+      <p class="chn">六岛</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="六岛">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">안푸루</h3>
+      <p class="chn">安福路</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="安福路">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">애스터 하우스</h3>
+      <p class="chn">浦江饭店</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="浦江饭店">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">엑스포 공원</h3>
+      <p class="chn">世博公园</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="世博公园">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">옛 대한민국 임시정부 청사</h3>
+      <p class="chn">大韩民国临时政府旧址</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="大韩民国临时政府旧址">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">옛 신톈안 교회</h3>
+      <p class="chn">原新天安堂</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="原新天安堂">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">옛 영국 영사관</h3>
+      <p class="chn">英国领事馆旧址</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="英国领事馆旧址">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">와이바이두차오</h3>
+      <p class="chn">外百度桥</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="外百度桥">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">와이탄 관광 터널</h3>
+      <p class="chn">外滩觀光隧道</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="外滩觀光隧道">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">와이탄 기상신호대</h3>
+      <p class="chn">上海外滩气象信号台</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海外滩气象信号台">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">와이탄 황소</h3>
+      <p class="chn">外滩牛</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="外滩牛">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">와이탄위안</h3>
+      <p class="chn">外滩源</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="外滩源">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">완상 화조 시장</h3>
+      <p class="chn">万商花鸟市场</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="万商花鸟市场">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">왕스위안</h3>
+      <p class="chn">网师园</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="网师园">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">우캉루</h3>
+      <p class="chn">武康路</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="武康路">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">웨광마터우</h3>
+      <p class="chn">月光码头</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="月光码头">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">웨왕묘</h3>
+      <p class="chn">岳王庙</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="岳王庙">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">위안진선원</h3>
+      <p class="chn">圆津禅院</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="圆津禅院">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">위위안</h3>
+      <p class="chn">豫园</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="豫园">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">위위안 상점가</h3>
+      <p class="chn">豫园商城</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="豫园商城">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">이펑 갤러리아</h3>
+      <p class="chn">益丰·外滩源</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="益丰·外滩源">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">장위안</h3>
+      <p class="chn">张园</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="张园">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">저우언라이 공관</h3>
+      <p class="chn">周公馆</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="周公馆">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">전광 빌딩</h3>
+      <p class="chn">真光大楼</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="真光大楼">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">주자자오 마을</h3>
+      <p class="chn">朱家角古镇</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="朱家角古镇">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">중국 공산당 제1차 전당대회 기념관</h3>
+      <p class="chn">中国共产党第一次全国代表大会会址纪念馆</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="中国共产党第一次全国代表大会会址纪念馆">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">중국 차엽 박물관 룽징관</h3>
+      <p class="chn">中国茶叶博物馆龙井馆区</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="中国茶叶博物馆龙井馆区">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">중화예술궁</h3>
+      <p class="chn">中华艺术宫</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="中华艺术宫">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">줘정위안</h3>
+      <p class="chn">拙政园</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="拙政园">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">진마오 타워</h3>
+      <p class="chn">金茂大厦</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="金茂大厦">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">진지후 공원</h3>
+      <p class="chn">金鸡湖景区</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="金鸡湖景区">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">징안 디자인 센터</h3>
+      <p class="chn">静安设计中心</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="静安设计中心">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">징안 빌라</h3>
+      <p class="chn">静安别墅</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="静安别墅">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">징안 조각 공원</h3>
+      <p class="chn">静安雕塑公园</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="静安雕塑公园">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">징안쓰</h3>
+      <p class="chn">静安寺</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="静安寺">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">차오허제 거리</h3>
+      <p class="chn">漕河街</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="漕河街">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">창러루</h3>
+      <p class="chn">长乐路</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="长乐路">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">청핀 서점</h3>
+      <p class="chn">诚品书店</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="诚品书店">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">치 K11 아트 뮤지엄</h3>
+      <p class="chn">上海 chi K11 艺术空间</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海 chi K11 艺术空间">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">칠리산탕</h3>
+      <p class="chn">七里山塘景区</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="七里山塘景区">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">커즈위안</h3>
+      <p class="chn">课植园</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="课植园">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">톈즈팡</h3>
+      <p class="chn">田子坊</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="田子坊">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">톈찬 경극 센터</h3>
+      <p class="chn">天蟾京剧中心</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="天蟾京剧中心">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">파워 스테이션 오브 아트</h3>
+      <p class="chn">上海当代艺术博物馆</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海当代艺术博物馆">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">판먼 공원</h3>
+      <p class="chn">盘门景区</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="盘门景区">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">팡셩차오</h3>
+      <p class="chn">放生桥</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="放生桥">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">퍼거슨 레인</h3>
+      <p class="chn">武康庭</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="武康庭">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">푸싱 공원</h3>
+      <p class="chn">复兴公园</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="复兴公园">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">푸저우루</h3>
+      <p class="chn">福州路</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="福州路">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">피시 스튜디오</h3>
+      <p class="chn">于南澄油画工作室</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="于南澄油画工作室">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">핑장루</h3>
+      <p class="chn">平江路</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="平江路">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">하모니 타임스퀘어</h3>
+      <p class="chn">圆融时代广场</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="圆融时代广场">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">허브 가든</h3>
+      <p class="chn">香草园</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="香草园">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">허팡제 거리</h3>
+      <p class="chn">河坊街</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="河坊街">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">황푸 강</h3>
+      <p class="chn">黄浦江</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="黄浦江">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">황푸 공원</h3>
+      <p class="chn">黄浦公园</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="黄浦公园">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">후추산 공원</h3>
+      <p class="chn">虎丘山风景名胜区</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="虎丘山风景名胜区">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">후파오 공원</h3>
+      <p class="chn">虎跑公园</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="虎跑公园">한자복사</button>
     </li>
   </ul>
 
