--- a/list.html
+++ b/list.html
@@ -40,7 +40,8 @@
       border:solid 1px #ccc;
       border-radius: 5px;
       padding:10px 18px;
-      margin-bottom:10px
+      margin-bottom:10px;
+      font-size: 14px;
     }
     input:focus {
       outline:none;
