--- a/list.html
+++ b/list.html
@@ -105,7 +105,7 @@
 <body translate="no"  onload="_l='t';">
 
   <div id="users">
-  <input class="search" placeholder="검색" />
+  <input class="search" placeholder="검색" />&nbsp;
   <button class="sort" data-sort="kor">
     가나다순 정렬
   </button>
