--- a/list_place.html
+++ b/list_place.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>list-test</title>
+  <title>리얼 상하이 명소</title>
     <style>
     ul {
     }
@@ -36,7 +36,7 @@
     }
 
     .active {
-        background-color: #4CAF50;
+        background-color: #FE0200;
     }
 
     h2 {
@@ -74,7 +74,7 @@
       border-radius: 5px;
       padding:10px 18px;
       margin-bottom:10px;
-      margin-top: 50px;
+      margin-top: 60px;
       font-size: 14px;
     }
     input:focus {
@@ -139,7 +139,7 @@
 <body>
   <div style="margin-left:-8px;">
   <ul class="gnbul">
-    <li class="gnbli"><a class="active" href="#">명소</a></li>
+    <li class="gnbli"><a class="active" href="list_place.html">명소</a></li>
     <li class="gnbli"><a href="#">음식점&카페</a></li>
     <li class="gnbli"><a href="#">상점</a></li>
     <li class="gnbli"><a href="#">숙소&스파</a></li>
