--- a/list_food.html
+++ b/list_food.html
@@ -255,9 +255,319 @@
       <button class="btnc" data-clipboard-action="copy" data-clipboard-text="人在茶在">한자복사</button>
     </li>
     <li>
-      <h3 class="kor"></h3>
-      <p class="chn"></p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="">한자복사</button>
+      <h3 class="kor">뤼보랑</h3>
+      <p class="chn">绿波廊</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="绿波廊">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">뤼차찬팅</h3>
+      <p class="chn">绿茶餐厅</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="绿茶餐厅">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">릴리안 베이커리</h3>
+      <p class="chn">莉莲蛋挞</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="莉莲蛋挞">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">멘야 무사시</h3>
+      <p class="chn">面屋武藏</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="面屋武藏">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">모미 카페</h3>
+      <p class="chn">猫的天空之城概念书店</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="猫的天空之城概念书店">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">미스터 나이스</h3>
+      <p class="chn">好好先生西餐厅</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="好好先生西餐厅">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">바바로사</h3>
+      <p class="chn">芭芭露莎</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="芭芭露莎">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">바오주나이라오</h3>
+      <p class="chn">宝珠奶酪</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="宝珠奶酪">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">반두 캐빈</h3>
+      <p class="chn">半度雨棚</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="半度雨棚">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">본 마틴 파리</h3>
+      <p class="chn">早安巴黎</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="早安巴黎">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">비스트 카페</h3>
+      <p class="chn">野兽咖啡</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="野兽咖啡">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">비어 셀프</h3>
+      <p class="chn">比利时啤酒体验店</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="比利时啤酒体验店">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">빈티지 엘리먼트 프레시</h3>
+      <p class="chn">新元素</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="新元素">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">사우스 뷰티</h3>
+      <p class="chn">俏江南</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="俏江南">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">상하이 라오라오</h3>
+      <p class="chn">上海姥姥家常饭馆</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海姥姥家常饭馆">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">샤오산바오 훠궈</h3>
+      <p class="chn">小三宝火锅</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="小三宝火锅">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">샤오양성젠</h3>
+      <p class="chn">小杨生煎</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="小杨生煎">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">샤오후이거 훠거</h3>
+      <p class="chn">小辉哥火锅</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="小辉哥火锅">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">샹바다오룽샤</h3>
+      <p class="chn">上海第一家香吧岛龙虾</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海第一家香吧岛龙虾">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">셰셰성훠</h3>
+      <p class="chn">谢谢生活</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="谢谢生活">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">쇼닝루</h3>
+      <p class="chn">寿宁路</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="寿宁路">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">스지쉬안</h3>
+      <p class="chn">四季轩</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="四季轩">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">신바이루</h3>
+      <p class="chn">新白鹿餐厅</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="新白鹿餐厅">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">신왕차찬팅</h3>
+      <p class="chn">新旺茶餐厅</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="新旺茶餐厅">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">심플리 타이</h3>
+      <p class="chn">天泰餐厅</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="天泰餐厅">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">아냥몐</h3>
+      <p class="chn">阿娘面</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="阿娘面">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">아이나이차</h3>
+      <p class="chn">阿姨奶茶</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="阿姨奶茶">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">엠 온 더 번드</h3>
+      <p class="chn">米氏西餐厅</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="米氏西餐厅">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">올드 상하이 티하우스</h3>
+      <p class="chn">老上海茶馆</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="老上海茶馆">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">올드 차이나 핸드 리딩 룸</h3>
+      <p class="chn">汉源书店</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="汉源书店">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">올드 필름 카페</h3>
+      <p class="chn">老电影咖啡馆</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="老电影咖啡馆">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">우장루 보행 거리</h3>
+      <p class="chn">吴江路步行街</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="吴江路步行街">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">윈하이야오</h3>
+      <p class="chn">云海肴</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="云海肴">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">이뎬뎬</h3>
+      <p class="chn">1 点点</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="1 点点">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">이룽샤오췌싱</h3>
+      <p class="chn">一笼小确幸</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="一笼小确幸">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">이카페</h3>
+      <p class="chn">怡咖啡</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="怡咖啡">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">자오궈궈 마라샹궈</h3>
+      <p class="chn">椒锅锅麻辣香锅</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="椒锅锅麻辣香锅">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">자자탕바오</h3>
+      <p class="chn">佳家汤包</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="佳家汤包">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">재스민 라운지</h3>
+      <p class="chn">茉莉酒廊</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="茉莉酒廊">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">종강완 실크 밀크티</h3>
+      <p class="chn">锺港湾港式丝袜奶茶</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="锺港湾港式丝袜奶茶">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">줘정위안 핑탄 찻집</h3>
+      <p class="chn">拙政園评弹茶室</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="拙政園评弹茶室">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">진샤팅</h3>
+      <p class="chn">金沙厅</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="金沙厅">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">차르 바</h3>
+      <p class="chn">恰酒吧</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="恰酒吧">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">청룽항셰왕푸</h3>
+      <p class="chn">成隆行蟹王府</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="成隆行蟹王府">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">충칭가오라오주 훠궈</h3>
+      <p class="chn">重庆高老九火锅</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="重庆高老九火锅">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">칭위안탕</h3>
+      <p class="chn">清源堂</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="清源堂">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">커티지 카페</h3>
+      <p class="chn">老麦咖啡馆</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="老麦咖啡馆">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">컬러풀 카페</h3>
+      <p class="chn">千彩书坊</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="千彩书坊">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">코뮨 카페</h3>
+      <p class="chn">公社咖啡</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="公社咖啡">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">코코</h3>
+      <p class="chn">都可饮料</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="都可饮料">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">쿠이위안관</h3>
+      <p class="chn">奎元馆</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="奎元馆">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">퉁더싱</h3>
+      <p class="chn">同得兴</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="同得兴">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">파라다이스 다이너스티</h3>
+      <p class="chn">乐新皇朝</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="乐新皇朝">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">파울라너 브로하우스</h3>
+      <p class="chn">宝莱纳餐厅</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="宝莱纳餐厅">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">파크 호텔 델리</h3>
+      <p class="chn">国际饭店西饼屋</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="国际饭店西饼屋">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">판샹</h3>
+      <p class="chn">饭香</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="饭香">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">페이룽성젠</h3>
+      <p class="chn">飞龙生煎</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="飞龙生煎">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">플레어 루프톱 바</h3>
+      <p class="chn">顶层餐厅酒吧</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="顶层餐厅酒吧">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">피자 익스프레스</h3>
+      <p class="chn">马上诺</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="马上诺">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">하북 플러스</h3>
+      <p class="chn">湾里书香</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="湾里书香">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">해피 레몬</h3>
+      <p class="chn">快乐柠檬</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="快乐柠檬">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">허니문 디저트</h3>
+      <p class="chn">满记甜品</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="满记甜品">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">후신팅</h3>
+      <p class="chn">湖心亭</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="湖心亭">한자복사</button>
     </li>
   </ul>
 
