--- a/list_place.html
+++ b/list_place.html
@@ -141,7 +141,7 @@
   <ul class="gnbul">
     <li class="gnbli"><a class="active" href="list_place.html">명소</a></li>
     <li class="gnbli"><a href="list_food.html">음식점&카페</a></li>
-    <li class="gnbli"><a href="#">상점</a></li>
+    <li class="gnbli"><a href="list_shop.html">상점</a></li>
     <li class="gnbli"><a href="#">숙소&스파</a></li>
     <li class="gnbli"><a href="#">교통</a></li>
   </ul>
