--- a/list_shop.html
+++ b/list_shop.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>리얼 상하이 명소</title>
+  <title>리얼 상하이 상점</title>
     <style>
     ul {
     }
@@ -142,8 +142,7 @@
     <li class="gnbli"><a href="list_place.html">명소</a></li>
     <li class="gnbli"><a href="list_food.html">음식점&카페</a></li>
     <li class="gnbli"><a class="active" href="list_shop.html">상점</a></li>
-    <li class="gnbli"><a href="#">숙소&스파</a></li>
-    <li class="gnbli"><a href="#">교통</a></li>
+    <li class="gnbli"><a href="list_etc.html">숙소&스파&교통</a></li>
   </ul>
 </div>
 
