--- a/list_etc.html
+++ b/list_etc.html
@@ -39,6 +39,32 @@
         background-color: #FE0200;
     }
 
+    .btnc {
+      background: #a8a8a8;
+      background-image: -webkit-linear-gradient(top, #a8a8a8, #7d7e80);
+      background-image: -moz-linear-gradient(top, #a8a8a8, #7d7e80);
+      background-image: -ms-linear-gradient(top, #a8a8a8, #7d7e80);
+      background-image: -o-linear-gradient(top, #a8a8a8, #7d7e80);
+      background-image: linear-gradient(to bottom, #a8a8a8, #7d7e80);
+      -webkit-border-radius: 28;
+      -moz-border-radius: 28;
+      border-radius: 28px;
+      color: #ffffff;
+      font-size: 14px;
+      padding: 10px 20px 10px 20px;
+      text-decoration: none;
+    }
+
+    div {
+    }
+
+    .btndiv {
+      text-align:right;
+      margin-top:-45px;
+      margin-right:20px;
+      padding-bottom: 5px;
+    }
+
     h2 {
     font-family:sans-serif;
     }
@@ -156,253 +182,253 @@
     <li>
       <h3 class="kor">JW 메리어트 호텔 투모로우 스퀘어</h3>
       <p class="chn">JW万豪酒店明天广场</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="JW万豪酒店明天广场">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="JW万豪酒店明天广场">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">나라다 부티크 호텔 위 가든</h3>
       <p class="chn">上海中星君亭酒店</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海中星君亭酒店">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海中星君亭酒店">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">만다린 오리엔탈 푸둥</h3>
       <p class="chn">上海浦东文华东方酒店</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海浦东文华东方酒店">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海浦东文华东方酒店">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">맨션 호텔</h3>
       <p class="chn">上海首席公馆酒店</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海首席公馆酒店">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海首席公馆酒店">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">밍타운 쑤저우 인터내셔널 유스호스텔</h3>
       <p class="chn">苏州明堂青年旅舍</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="苏州明堂青年旅舍">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="苏州明堂青年旅舍">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">밍타운 에투어 유스호스텔</h3>
       <p class="chn">明堂新易途国际青年旅社</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="明堂新易途国际青年旅社">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="明堂新易途国际青年旅社">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">블로섬 인 쑤저우</h3>
       <p class="chn">苏州花间堂</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="苏州花间堂">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="苏州花间堂">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">셴워화위안주뎬</h3>
       <p class="chn">鲜屋花园酒店</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="鲜屋花园酒店">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="鲜屋花园酒店">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">소호 인터내셔널 유스호스텔 상하이 디즈니</h3>
       <p class="chn">苏荷国际青年旅舍</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="苏荷国际青年旅舍">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="苏荷国际青年旅舍">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">아스코트 헝산 상하이</h3>
       <p class="chn">上海雅诗阁衡山服务公寓</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海雅诗阁衡山服务公寓">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海雅诗阁衡山服务公寓">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">아스터 하우스 호텔</h3>
       <p class="chn">浦江饭店</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="浦江饭店">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="浦江饭店">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">양쯔 부티크 호텔</h3>
       <p class="chn">上海扬子精品酒店</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海扬子精品酒店">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海扬子精品酒店">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">에잇 아트 호텔 온 더 번드</h3>
       <p class="chn">上海外滩八号艺术酒店</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海外滩八号艺术酒店">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海外滩八号艺术酒店">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">인터컨티넨탈 쑤저우</h3>
       <p class="chn">苏州洲际酒店</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="苏州洲际酒店">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="苏州洲际酒店">한자복사</button></div>
     </li>
 
     <li>
       <h3 class="kor">지 호텔 상하이 화이하이</h3>
       <p class="chn">全季酒店</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="全季酒店">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="全季酒店">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">진장 메트로폴로 클래식 호텔 상하이 와이탄 오프 번드</h3>
       <p class="chn">锦江都城经典</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="锦江都城经典">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="锦江都城经典">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">켐핀스키 호텔 쑤저우</h3>
       <p class="chn">苏州金鸡湖凯宾斯基大酒店</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="苏州金鸡湖凯宾斯基大酒店">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="苏州金鸡湖凯宾斯基大酒店">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">타오위안샹</h3>
       <p class="chn">桃园乡</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="桃园乡">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="桃园乡">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">티 부티크 호텔</h3>
       <p class="chn">杭州天伦精品酒店</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="杭州天伦精品酒店">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="杭州天伦精品酒店">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">페어몬트 피스 호텔</h3>
       <p class="chn">和平飯店</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="和平飯店">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="和平飯店">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">포시즌스 상하이 호텔</h3>
       <p class="chn">四季酒店</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="四季酒店">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="四季酒店">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">포시즌스 호텔 항저우 앳 웨스트 레이크</h3>
       <p class="chn">杭州西子湖四季酒店</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="杭州西子湖四季酒店">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="杭州西子湖四季酒店">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">푸둥 샹그릴라 호텔</h3>
       <p class="chn">浦东香格里拉大酒店</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="浦东香格里拉大酒店">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="浦东香格里拉大酒店">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">홈인 플러스 화이하이</h3>
       <p class="chn">如家精选</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="如家精选">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="如家精选">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">도시관광버스</h3>
       <p class="chn">都市观光</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="都市观光">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="都市观光">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">도시관광버스 와이탄 서비스 센터</h3>
       <p class="chn">都市观光外滩旅游服务中心</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="都市观光外滩旅游服务中心">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="都市观光外滩旅游服务中心">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">동방명주 황푸 강 크루즈</h3>
       <p class="chn">东方明珠浦江游览</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="东方明珠浦江游览">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="东方明珠浦江游览">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">둥창루 선착장</h3>
       <p class="chn">东昌路渡口</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="东昌路渡口">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="东昌路渡口">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">빅 버스</h3>
       <p class="chn">大巴士</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="大巴士">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="大巴士">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">상주셴</h3>
       <p class="chn">上朱线</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上朱线">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上朱线">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">상하이 남버스 터미널</h3>
       <p class="chn">上海长途汽车客南站</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海长途汽车客南站">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海长途汽车客南站">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">상하이 남역</h3>
       <p class="chn">上海南站</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海南站">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海南站">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">상하이 뤼유지산중신</h3>
       <p class="chn">上海旅游集散中心总站</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海旅游集散中心总站">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海旅游集散中心总站">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">상하이 역</h3>
       <p class="chn">上海站</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海站">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海站">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">상하이 중앙 버스 터미널</h3>
       <p class="chn">上海长途汽车客运总站</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海长途汽车客运总站">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海长途汽车客运总站">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">상하이 훙차오 기차역</h3>
       <p class="chn">上海虹桥站</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海虹桥站">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海虹桥站">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">쑤저우 강 크루즈</h3>
       <p class="chn">苏州河游览</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="苏州河游览">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="苏州河游览">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">쑤저우 북광장 버스 터미널</h3>
       <p class="chn">苏州北广场客运站</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="苏州北广场客运站">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="苏州北广场客运站">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">쑤저우 북역</h3>
       <p class="chn">苏州北站</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="苏州北站">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="苏州北站">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">쑤저우 역</h3>
       <p class="chn">苏州火车站</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="苏州火车站">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="苏州火车站">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">우캉루 여행 안내 센터</h3>
       <p class="chn">武康路旅游资讯中心</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="武康路旅游资讯中心">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="武康路旅游资讯中心">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">진링둥루 선착장</h3>
       <p class="chn">金陵东路渡口</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="金陵东路渡口">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="金陵东路渡口">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">푸둥 국제공항</h3>
       <p class="chn">浦东国际机</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="浦东国际机">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="浦东国际机">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">푸둥 국제공항 디즈니랜드선</h3>
       <p class="chn">上海国际旅游度假区快线4号线</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海国际旅游度假区快线4号线">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海国际旅游度假区快线4号线">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">항저우 동역</h3>
       <p class="chn">杭州东站</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="杭州东站">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="杭州东站">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">항저우 버스 터미널</h3>
       <p class="chn">杭州长途汽车客运总站</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="杭州长途汽车客运总站">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="杭州长途汽车客运总站">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">항저우 샤오산 국제공항</h3>
       <p class="chn">杭州萧山国际机场</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="杭州萧山国际机场">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="杭州萧山国际机场">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">항저우 역</h3>
       <p class="chn">杭州站</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="杭州站">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="杭州站">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">황푸 강 크루즈</h3>
       <p class="chn">黄浦江游船</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="黄浦江游船">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="黄浦江游船">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">훙차오 국제공항</h3>
       <p class="chn">虹桥机场</p>
-      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="虹桥机场">한자복사</button>
+      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="虹桥机场">한자복사</button></div>
     </li>
   </ul>
 
