--- a/list_shop.html
+++ b/list_shop.html
@@ -196,7 +196,7 @@
     </li>
     <li>
       <h3 class="kor">ifc 몰</h3>
-      <p class="chn"></p>
+      <p class="chn">上海国金中心商场 Mall</p>
       <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海国金中心商场 Mall">한자복사</button></div>
     </li>
     <li>
@@ -253,11 +253,6 @@
       <h3 class="kor">막스 앤 스펜서</h3>
       <p class="chn">玛莎百货</p>
       <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="玛莎百货">한자복사</button></div>
-    </li>
-    <li>
-      <h3 class="kor"></h3>
-      <p class="chn"></p>
-      <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="">한자복사</button></div>
     </li>
     <li>
       <h3 class="kor">메터스본위</h3>
