--- a/list_etc.html
+++ b/list_etc.html
@@ -200,7 +200,7 @@
       <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海首席公馆酒店">한자복사</button></div>
     </li>
     <li>
-      <h3 class="kor">밍타운 쑤저우 인터내셔널 유스호스텔</h3>
+      <h3 class="kor">밍타운 쑤저우 인터내셔널<br />유스호스텔</h3>
       <p class="chn">苏州明堂青年旅舍</p>
       <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="苏州明堂青年旅舍">한자복사</button></div>
     </li>
@@ -220,7 +220,7 @@
       <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="鲜屋花园酒店">한자복사</button></div>
     </li>
     <li>
-      <h3 class="kor">소호 인터내셔널 유스호스텔 상하이 디즈니</h3>
+      <h3 class="kor">소호 인터내셔널 유스호스텔<br />상하이 디즈니</h3>
       <p class="chn">苏荷国际青年旅舍</p>
       <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="苏荷国际青年旅舍">한자복사</button></div>
     </li>
@@ -256,7 +256,7 @@
       <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="全季酒店">한자복사</button></div>
     </li>
     <li>
-      <h3 class="kor">진장 메트로폴로 클래식 호텔 상하이 와이탄 오프 번드</h3>
+      <h3 class="kor">진장 메트로폴로 클래식<br />호텔 상하이 와이탄 오프 번드</h3>
       <p class="chn">锦江都城经典</p>
       <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="锦江都城经典">한자복사</button></div>
     </li>
@@ -286,7 +286,7 @@
       <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="四季酒店">한자복사</button></div>
     </li>
     <li>
-      <h3 class="kor">포시즌스 호텔 항저우 앳 웨스트 레이크</h3>
+      <h3 class="kor">포시즌스 호텔 항저우<br />앳 웨스트 레이크</h3>
       <p class="chn">杭州西子湖四季酒店</p>
       <div class="btndiv"><button class="btnc" data-clipboard-action="copy" data-clipboard-text="杭州西子湖四季酒店">한자복사</button></div>
     </li>
