--- a/list_place.html
+++ b/list_place.html
@@ -18,6 +18,22 @@
       overflow: hidden;
       background-color: #333;
     }
+    .gnbfoot {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background-color: #333;
+      color: white;
+      padding: 15px 0px;
+      text-decoration: none;
+      display: block;
+      text-align: center;
+    }
+
     li {
     }
     .gnbli {
@@ -169,6 +185,9 @@
     <li class="gnbli"><a href="list_food.html">음식점&카페</a></li>
     <li class="gnbli"><a href="list_shop.html">상점</a></li>
     <li class="gnbli"><a href="list_etc.html">숙소&스파&교통</a></li>
+  </ul>
+  <ul class="gnbfoot">
+    리얼 상하이
   </ul>
 </div>
 
